--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^17.0.2",
     "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
+    "react-lottie": "^1.2.3",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "web-vitals": "^2.1.4"
