--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-facebook-login": "^4.1.1",
     "react-lottie": "^1.2.3",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.7",
     "react-slick": "^0.29.0",
     "web-vitals": "^2.1.4"
   },
